<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:stretchColumns="1">

            <TableRow
                android:id="@+id/tableRow1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <!-- layout span faz com que a imagem ocupe as duas colunas -->

                <ImageView
                    android:id="@+id/imgContato"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_span="2"
                    android:scaleType="fitCenter"
                    android:src="@drawable/ic_no_image" />
            </TableRow>

            <View
                android:layout_height="2dip"
                android:background="#FF909090" />

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/contatoNome" />

                <EditText
                    android:id="@+id/txtNome"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <requestFocus />
                </EditText>
            </TableRow>

            <TableRow
                android:id="@+id/tableRow2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/contatoEndereco" />

                <EditText
                    android:id="@+id/txtEndereco"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="text"/>
            </TableRow>

            <TableRow
                android:id="@+id/tableRow3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/contatoTelefone" />

                <EditText
                    android:id="@+id/txtTelefone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="phone" />
            </TableRow>

            <TableRow
                android:id="@+id/tableRow4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/contatoSite" />

                <EditText
                    android:id="@+id/txtSite"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/contatoEmail" />

                <EditText
                    android:id="@+id/txtEmail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress" />
            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/contatoDataNascto" />

                <Button
                    android:id="@+id/txtDatanascimento"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="selecionarData"
                    android:text="@string/contatoBtnData" />
            </TableRow>

            <View
                android:layout_height="2dip"
                android:background="#FF909090" />

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <!-- layout_column pocisiona o botão na secunda coluna da linha, a contagem começa no 0 -->

                <Button
                    android:id="@+id/btnCadastro"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/contatoBtnOK"
                    android:layout_span="2"/>
            </TableRow>
        </TableLayout>
    </LinearLayout>
</ScrollView>
